force-app/main/default/objects/numm__Ligne_de_relance__c/numm__Ligne_de_relance__c.object-meta.xml
<CustomObject>
    <label>Ligne de relance</label>
    <nameField>
        <displayFormat>LR-{00000}</displayFormat>
        <label>Ligne de relance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de relance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>