force-app/main/default/objects/numm__Ligne_de_relance__c/fields/numm__Contact__c.field-meta.xml
<CustomField>
    <fullName>numm__Contact__c</fullName>
    <formula>numm__Relance__r.numm__Contact__r.LastName + &#39; &#39; + numm__Relance__r.numm__Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>