force-app/main/default/objects/numm__Ligne_de_relance__c/fields/numm__Date_de_relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_de_relance__c</fullName>
    <label>Date de relance</label>
    <type>Date</type>
</CustomField>