force-app/main/default/objects/numm__Ligne_de_relance__c/fields/numm__Ecriture_generale__c.field-meta.xml
<CustomField>
    <fullName>numm__Ecriture_generale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ecriture générale</label>
    <referenceTo>numm__VoucherTransaction__c</referenceTo>
    <relationshipLabel>Lignes de relance</relationshipLabel>
    <relationshipName>Lignes_de_relance</relationshipName>
    <type>Lookup</type>
</CustomField>