force-app/main/default/objects/numm__Ligne_de_relance__c/fields/numm__Etape_de_relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Etape_de_relance__c</fullName>
    <formula>numm__Relance__r.numm__Etape_de_relance__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etape de relance</label>
    <type>Text</type>
</CustomField>