force-app/main/default/objects/numm__Ligne_de_relance__c/fields/numm__Piece__c.field-meta.xml
<CustomField>
    <fullName>numm__Piece__c</fullName>
    <label>Pièce</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Lignes de relance</relationshipLabel>
    <relationshipName>Lignes_de_relance</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>