force-app/main/default/objects/numm__Ligne_de_relance__c/fields/numm__Relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Relance__c</fullName>
    <label>Relance</label>
    <referenceTo>numm__Relance__c</referenceTo>
    <relationshipLabel>Lignes de relance</relationshipLabel>
    <relationshipName>Lignes_de_relance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>