force-app/main/default/objects/numm__Ligne_de_relance__c/fields/numm__Type_de_relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_relance__c</fullName>
    <formula>TEXT(numm__Relance__r.numm__Type_de_relance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de relance</label>
    <type>Text</type>
</CustomField>